--- a/mirage/views/qml/parametersview.ui
+++ b/mirage/views/qml/parametersview.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>448</width>
-    <height>697</height>
+    <height>730</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -51,6 +51,9 @@
         </item>
         <item row="1" column="1">
          <widget class="QDoubleSpinBox" name="lRedshiftInput">
+          <property name="decimals">
+           <number>3</number>
+          </property>
           <property name="maximum">
            <double>10.000000000000000</double>
           </property>
@@ -75,6 +78,9 @@
         </item>
         <item row="0" column="1">
          <widget class="QDoubleSpinBox" name="ellipRInput">
+          <property name="decimals">
+           <number>7</number>
+          </property>
           <property name="minimum">
            <double>-100.000000000000000</double>
           </property>
@@ -98,6 +104,9 @@
           <property name="whatsThis">
            <string>Angle in Degrees.</string>
           </property>
+          <property name="decimals">
+           <number>3</number>
+          </property>
           <property name="maximum">
            <double>359.000000000000000</double>
           </property>
@@ -105,6 +114,9 @@
         </item>
         <item row="1" column="1">
          <widget class="QDoubleSpinBox" name="shearRInput">
+          <property name="decimals">
+           <number>7</number>
+          </property>
           <property name="minimum">
            <double>-100.000000000000000</double>
           </property>
@@ -120,6 +132,9 @@
           </property>
           <property name="whatsThis">
            <string>Angle in Degrees.</string>
+          </property>
+          <property name="decimals">
+           <number>3</number>
           </property>
           <property name="maximum">
            <double>359.000000000000000</double>
@@ -148,6 +163,9 @@
         </item>
         <item row="0" column="1">
          <widget class="QDoubleSpinBox" name="qRedshiftInput">
+          <property name="decimals">
+           <number>3</number>
+          </property>
           <property name="maximum">
            <double>10.000000000000000</double>
           </property>
